# school-manager

./: .gitignore  Dockerfile  README.md  django.sh  manage.py  pyproject.toml  requirements.txt
api/: admin.py  filters.py  models.py  serializers.py  swagger.py  views.py
api/utils/: student_validators.py
school_manager/: asgi.py  settings.py  urls.py  wsgi.py
